--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
     <footer>
         <p>Created by Arjay Borja | Inspired by Naruto | <span class="chakra">Believe It!</span></p>
     </footer>
-    <script src="hi.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
