--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <h2>Skills</h2>
         <div class="skills-list">
             <div class="skill">
-                <img/1756376421680.jpg"/1756376421680.jp
+                <img src="1756376421680.jpg">
                 <span>HTML: Rasengan of Structure</span>
             </div>
             <divclass="skill">
-                <img src=/1756376544157.jpg ="Rasengan">
+                <img src=1756376544157.jpg ="Rasengan">
                   naruto_PNG38 .jpg" alt="Shuriken">
                 <span>CSS: Shuriken of Style</span>
             </div>
@@ -49,7 +49,7 @@
                 <span>JavaScript: Shadow Clone of Logic</span>
             </div>
             <div class="skill">
-                <img3"https://imgur.com/a/aeWJDbW.jpeg"  alt="Leaf Village">
+                <img3 src="https://imgur.com/a/aeWJDbW.jpeg"  alt="Leaf Village">
                 <span>Responsive Design: Leaf Village Adaptability</span>
             </div>
         </div>
