--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Skills</h2>
         <div class="skills-list">
             <div class="skill">
-                <img src="1756376421680.jpg">
+                <img src="IMG_1758.png">
                 <span>HTML: Rasengan of Structure</span>
             </div>
             <divclass="skill">
