--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <span>CSS: Shuriken of Style</span>
             </div>
             <div class="skill">
-                <img src="https://imgur.com/a/eMlSxxP.jpg" alt="Shadow Clone">
+                <img src="IMG_1759.png" alt="Shadow Clone">
                 <span>JavaScript: Shadow Clone of Logic</span>
             </div>
             <div class="skill">
