--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <span>HTML: Rasengan of Structure</span>
             </div>
             <divclass="skill">
-                <img src=1756376544157.jpg ="Rasengan">
-                  naruto_PNG38 .jpg" alt="Shuriken">
+                <img src="IMG_1760.png" alt="Rasengan">
+                  <img src="naruto_PNG38 .jpg" alt="Shuriken">
                 <span>CSS: Shuriken of Style</span>
             </div>
             <div class="skill">
