--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="about" class="section">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="https://imgur.com/58ujmP3.jpeg" alt="Shinobi Headband" class="headband">
+            <img src="IMG_1761.jpeg" alt="Shinobi Headband" class="headband">
             <p>
                 Just like Naruto, I believe in never giving up. I'm a passionate front-end developer with a love for anime, especially Naruto. My ninja way is to bring energy, dedication, and creativity to every project. I strive to learn new jutsu (skills) and perfect my craft every day.
             </p>
