--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="/new salfware ="Rasengan">/images/1756376544157.jpg/1756376544157.jpg.png" alt="Naruto Logo">
+            <img src="/new salfware" alt="Rasengan">
+            <img src="IMG_1761.jpeg" alt="Naruto Logo">
             <span>Borja's Shinobi Portfolio</span>
         </div>
         <ul>
