--- a/index.html
+++ b/index.html
@@ -3,71 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Borja's Shinobi Portfolio</title>
+    <title>My Portfolio | [Arjay Borja]</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <nav>
-        <div class="logo">
-            <img src="/new salfware" alt="Rasengan">
-            <img src="IMG_1761.jpeg" alt="Naruto Logo">
-            <span>Borja's Shinobi Portfolio</span>
+    <!-- Navigation -->
+    <nav id="navbar">
+        <div class="container">
+            <h2 class="logo">[Arjay Borja]</h2>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <button class="menu-btn"><i class="fas fa-bars"></i></button>
         </div>
-        <ul>
-            <li><a href="#home" class="nav-link">Home</a></li>
-            <li><a href="#about" class="nav-link">About Me</a></li>
-            <li><a href="#skills" class="nav-link">Skills</a></li>
-            <li><a href="#contact" class="nav-link">Contact</a></li>
-        </ul>
     </nav>
-    <section id="home" class="section">
-        <div class="home-container"> 
-        </div>
-    </section>
-    <section id="about" class="section">
-        <h2>About Me</h2>
-        <div class="about-content">
-            <img src="IMG_1761.jpeg" alt="Shinobi Headband" class="headband">
-            <p>
-                Just like Naruto, I believe in never giving up. I'm a passionate front-end developer with a love for anime, especially Naruto. My ninja way is to bring energy, dedication, and creativity to every project. I strive to learn new jutsu (skills) and perfect my craft every day.
-            </p>
-        </div>
-    </section>
-    <section id="skills" class="section">
-        <h2>Skills</h2>
-        <div class="skills-list">
-            <div class="skill">
-                <img src="IMG_1758.png">
-                <span>HTML: Rasengan of Structure</span>
-            </div>
-            <divclass="skill">
-                <img src="IMG_1760.png" alt="Rasengan">
-                  <img src="naruto_PNG38 .jpg" alt="Shuriken">
-                <span>CSS: Shuriken of Style</span>
-            </div>
-            <div class="skill">
-                <img src="IMG_1759.png" alt="Shadow Clone">
-                <span>JavaScript: Shadow Clone of Logic</span>
-            </div>
-            <div class="skill">
-                <img3 src="https://imgur.com/a/aeWJDbW.jpeg"  alt="Leaf Village">
-                <span>Responsive Design: Leaf Village Adaptability</span>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Hi, I'm <span>Arjay Borja</span></h1>
+                <h2>Fronted Developer</h2>
+                <p>Creating clean, functional, and beautiful digital experiences.</p>
+                <a href="#projects" class="btn">View My Work</a>
             </div>
         </div>
     </section>
-    <section id="contact" class="section">
-        <h2>Contact</h2>
-        <form id="contactForm">
-            <input type="text" id="name" placeholder="Your Ninja Name" required>
-            <input type="email" id="email" placeholder="Your Ninja Email" required>
-            <textarea id="message" placeholder="Your Message (Dattebayo!)" required></textarea>
-            <button type="submit">Send Summoning Scroll</button>
-        </form>
-        <div id="formMessage"></div>
+
+    <!-- About Section -->
+    <section id="about" class="about section-padding">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>I'm a passionate developer based in the Philippines, with expertise in building responsive web applications. I love turning ideas into interactive, user-friendly solutions that solve real problems.</p>
+                    <p>When I'm not coding, I enjoy learning new technologies, contributing to open-source projects, and exploring creative design trends.</p>
+                </div>
+                <div class="about-img">
+                    <img src="https://imgur.com/eZiTROw.jpeg" alt="[Your Name]">
+                </div>
+            </div>
+        </div>
     </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="projects section-padding">
+        <div class="container">
+            <h2 class="section-title">My Projects</h2>
+            <div class="projects-grid">
+                <!-- Project 1 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/400x250" alt="Project 1">
+                    <div class="project-info">
+                        <h3>Project Title 1</h3>
+                        <p>A brief description of the project. Tech used: HTML, CSS, JavaScript.</p>
+                        <div class="project-links">
+                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/400x250" alt="Project 2">
+                    <div class="project-info">
+                        <h3>Project Title 2</h3>
+                        <p>A brief description of the project. Tech used: React, Tailwind CSS.</p>
+                        <div class="project-links">
+                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project 3 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/400x250" alt="Project 3">
+                    <div class="project-info">
+                        <h3>Project Title 3</h3>
+                        <p>A brief description of the project. Tech used: Node.js, Express, MongoDB.</p>
+                        <div class="project-links">
+                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="skills section-padding">
+        <div class="container">
+            <h2 class="section-title">My Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-item"><i class="fab fa-html5"></i> HTML</div>
+                <div class="skill-item"><i class="fab fa-css3-alt"></i> CSS</div>
+                <div class="skill-item"><i class="fab fa-js"></i> JavaScript</div>
+                <div class="skill-item"><i class="fab fa-react"></i> React</div>
+                <div class="skill-item"><i class="fab fa-node-js"></i> Node.js</div>
+                <div class="skill-item"><i class="fab fa-github"></i> Git/GitHub</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact section-padding">
+        <div class="container">
+            <h2 class="section-title">Get In Touch</h2>
+            <div class="contact-content">
+                <form id="contact-form">
+                    <input type="text" placeholder="Your Name" required>
+                    <input type="email" placeholder="Your Email" required>
+                    <textarea placeholder="Your Message" rows="5" required></textarea>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+                <div class="contact-details">
+                    <p><i class="fas fa-map-marker-alt"></i> Philippines</p>
+                    <p><i class="fas fa-envelope"></i> your.email@example.com</p>
+                    <p><i class="fab fa-linkedin"></i> linkedin.com/in/yourprofile</p>
+                    <p><i class="fab fa-github"></i> github.com/yourusername</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <p>Created by Arjay Borja | Inspired by Naruto | <span class="chakra">Believe It!</span></p>
+        <div class="container">
+            <p>&copy; 2026 Arjay Borja. All rights reserved.</p>
+        </div>
     </footer>
-    <script src="script.js"></script>
+
+    <script src="style.js"></script>
 </body>
 </html>
