--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <!-- Project 3 -->
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/400x250" alt="Project 3">
+                    <img src="IMG_1759.png" alt="Project 3">
                     <div class="project-info">
                         <h3>Project Title 3</h3>
                         <p>A brief description of the project. Tech used: Node.js, Express, MongoDB.</p>
