--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="projects-grid">
                 <!-- Project 1 -->
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/400x250" alt="Project 1">
+                    <img src="IMG_1758.png" alt="Project 1">
                     <div class="project-info">
                         <h3>Project Title 1</h3>
                         <p>A brief description of the project. Tech used: HTML, CSS, JavaScript.</p>
