--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <!-- Project 2 -->
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/400x250" alt="Project 2">
+                    <img src="IMG_1760.png" alt="Project 2">
                     <div class="project-info">
                         <h3>Project Title 2</h3>
                         <p>A brief description of the project. Tech used: React, Tailwind CSS.</p>
